# mm-vae

./: CMakeLists.txt  README.md  mmvae.hh  mmvae_main.cc
include/: io.hh  io_alg.hh  io_visitor.hh  mmutil_bgzf_util.hh  mmutil_index.hh  mmvae.hh  mmvae_alg.hh  mmvae_io.hh  mmvae_mem.hh  operators.hh
include/ext/tabix/: bgzf.h  kstring.h
include/models/: nb.hh  vmf.hh  vmfnb.hh  vmfnb_mixture.hh
include/modules/: angular.hh  linear_l2.hh
include/utils/: bgzstream.hh  check.hh  eigen_util.hh  graph.hh  math.hh  net_util.hh  net_util_impl.hh  stat.hh  std_util.hh  strbuf.hh  util.hh
src/: nb_vae_main.cc  nbvae_main.cc  vmf_mix_main.cc  vmf_vae_main.cc  vmfnb_vae_main.cc
src/backup/: vmfnb_vae_main.cc
src/ext/tabix/: bedidx.c  bgzip.c  index.c  kstring.c  main.c
